--- a/src/main/resources/templates/fragments/navigation.html
+++ b/src/main/resources/templates/fragments/navigation.html
@@ -5,16 +5,23 @@
     <title>Title</title>
 </head>
 <body>
-<nav th:fragment="nav" class="flex items-center justify-between px-4 py-4 bg-primary text-primary-foreground">
-    <div title="Logo" class="order-1 text-xl font-bold">TailwindCSS</div>
-    <div class="flex items-center space-x-4 order-2">
+<nav th:fragment="nav" class="flex flex-col md:flex-row items-center justify-between px-4 py-4 bg-primary text-primary-foreground">
+    <div title="Logo" class="order-1 text-xl font-bold">Planner App</div>
+    <input type="checkbox" id="menu-toggle" class="hidden">
+    <label for="menu-toggle" class="cursor-pointer md:hidden block order-2 md:order-1">
+        <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h16"></path>
+        </svg>
+    </label>
+    <div id="menu-links"
+         class="hidden md:flex flex-col md:flex-row items-center space-x-4 order-3 md:order-2 w-full md:w-auto">
         <a href="#" class="text-base font-medium hover:text-primary-700">About</a>
         <a href="#" class="text-base font-medium hover:text-primary-700">Contacts</a>
         <a href="#" class="text-base font-medium hover:text-primary-700">Add Task</a>
         <a href="#" class="text-base font-medium hover:text-primary-700">My Tasks</a>
         <a href="#" class="text-base font-medium hover:text-primary-700">Open Tasks</a>
     </div>
-    <div class="flex items-center space-x-4 order-3">
+    <div class="flex items-center space-x-4 order-2 md:order-3">
         <button class="text-base font-medium text-primary-foreground hover:text-primary-700">Register</button>
         <button class="text-base font-medium text-primary-foreground hover:text-primary-700">Login</button>
     </div>
