--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -3,7 +3,7 @@
 <body>
 
 
-<div class="min-h-screen flex items-center justify-center bg-background dark:bg-black">
+<div class="bg-blue-500 min-h-screen flex items-center justify-center bg-background dark:bg-black">
     <div class="bg-card dark:bg-card-foreground rounded-lg shadow-lg p-8 max-w-sm w-full">
         <h2 class="text-2xl font-bold text-primary text-center mb-6">Login</h2>
         <form>
