--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -5,10 +5,13 @@
 <nav th:replace="~{/fragments/navigation::nav}"></nav>
 <div class="background-blue text-primary-foreground min-h-screen flex flex-col items-center justify-center">
     <div class="text-center max-w-4xl mx-auto p-8">
-        <h1 class="text-4xl text-primary font-bold mb-8">Welcome to Planner App</h1>
-        <p class="text-lg text-muted-foreground mb-8">Plan your day, week, and month efficiently with our intuitive Planner App. Stay organized and productive!</p>
+        <h1 class="text-6xl text-primary font-bold mb-8">Welcome to Planner App</h1>
+        <p class="mb-4 text-lg text-muted-foreground">
+            Plan your day, week, and month efficiently with our intuitive Planner App.
+            Stay organized and productive.
+            Keep track of all your tasks, appointments, and events in one place!Organize your tasks with priority levels, categories, and due dates. Our task manager helps you stay focused on what matters most.</p>
     </div>
-    <div class="purple-blue-bg text-card-foreground p-8 my-8 mx-4 rounded-lg shadow-lg max-w-4xl">
+    <div class="mt-0 purple-blue-bg text-card-foreground p-8 my-8 mx-4 rounded-lg shadow-lg max-w-4xl">
         <h2 class="text-2xl font-bold mb-4">Features</h2>
         <div class="grid grid-cols-1 md:grid-cols-2 gap-4">
             <div class="flex items-center">
