Add today-date.js and yesterday-date.js. Crete page for add task and add get mapping for page.

--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -337,4 +337,5 @@
 </body>
 <script th:src="@{/js/completed-tasks.js}"></script>
 <script th:src="@{/js/switch-future-prev-tasks.js}"></script>
+<script th:src="@{/js/yesterday-date.js}"></script>
 </html>
