--- a/src/main/resources/templates/about.html
+++ b/src/main/resources/templates/about.html
@@ -5,8 +5,8 @@
 <nav th:replace="~{/fragments/navigation::nav}"></nav>
 <div class="mr-10 ml-10 text-primary-foreground min-h-screen flex flex-col items-center justify-center p-4">
     <!--    <img class="w-24 h-24 mb-4" src="https://placehold.co/150?text=📅" alt="planner-icon" />-->
-    <main class="container mx-auto p-6">
-        <h1 class="text-center text-4xl font-extrabold mb-4 text-black">About Us</h1>
+    <main class="text-center container mx-auto pr-6 pl-6">
+        <h1 class=" text-4xl font-extrabold mb-4 text-black">About Us</h1>
         <section class="text-black mb-6">
             <p class="mb-4">
                 Planner App is designed to help you manage your tasks, organize your schedule, and stay on top of your
@@ -35,21 +35,21 @@
                 and ensure that your information remains confidential. Our commitment to providing a safe and secure
                 platform means you can trust Planner App with your most sensitive plans and tasks.
             </p>
-<!--            <p class="mb-4">-->
-<!--                We are continually working to improve Planner App based on user feedback. Our dedicated team is always-->
-<!--                on the lookout for new features and enhancements to make your planning experience even better. Join the-->
-<!--                Planner App community today and take control of your time and productivity.-->
-<!--            </p>-->
-<!--            <p class="mb-4">-->
-<!--                Thank you for choosing Planner App. We are excited to help you achieve your goals and streamline your-->
-<!--                life.-->
-<!--            </p>-->
+            <p class="mb-4">
+                We are continually working to improve Planner App based on user feedback. Our dedicated team is always
+                on the lookout for new features and enhancements to make your planning experience even better. Join the
+                Planner App community today and take control of your time and productivity.
+            </p>
+            <p class="mb-4">
+                Thank you for choosing Planner App. We are excited to help you achieve your goals and streamline your
+                life.
+            </p>
         </section>
 
-        <section class="mb-6">
-            <img src="https://via.placeholder.com/1200x600" alt="Planner App Screenshot"
-                 class="rounded-lg shadow-md w-full">
-        </section>
+<!--        <section class="mb-6">-->
+<!--            <img src="/images/about" alt="Planner App Screenshot"-->
+<!--                 class="rounded-lg shadow-md w-full">-->
+<!--        </section>-->
     </main>
 </div>
 <footer th:replace="~{/fragments/footer::footer}"></footer>
